⬆️ OpenRewrite: Modernize to Java 21 + Spring Boot 3.3